--- a/packages/design-system/mixin/_responsive.scss
+++ b/packages/design-system/mixin/_responsive.scss
@@ -1,5 +1,3 @@
-@use 'sass:map';
-
 /**
  * Media query handler
  * @param $size The target breakpoint
@@ -7,6 +5,7 @@
  * @param $ensure Defines if content rules should be appended on error
  */
  @mixin screen-query($size, $op: '>=', $ensure: false) {
+  $breakpoint: null;
   // normalizing target breakpoint
   @if type-of($size) == 'number' {
     @if not unitless($size) {
@@ -14,30 +13,26 @@
     } @else {
       $breakpoint: $size;
     }
-  } @else if global-variable-exists($breakpoints) {
-    $breakpoint: map.get($breakpoints, $size);
-  } @else {
-    $breakpoint: null;
+  } @else if global-variable-exists('breakpoints') {
+    $breakpoint: map-get($breakpoints, $size);
   }
   // handling content rules
   @if $breakpoint {
     // setting operator fallback
-    @if not list.index(('<', '<=', '>=', '>'), $op) {
+    @if index(('<', '<=', '>=', '>'), $op) == null {
       $op: '>=';
     }
     // defining query direction and adjusting breakpoint
+    $dir: 'min';
+
     @if $op == '<' or $op == '<=' {
       $dir: 'max';
 
       @if $op == '<' {
         $breakpoint: $breakpoint - 1;
       }
-    } @else {
-      $dir: 'min';
-
-      @if $op == '>' {
-        $breakpoint: $breakpoint + 1;
-      }
+    } @else if $op == '>' {
+      $breakpoint: $breakpoint + 1;
     }
     // defining media query
     @media screen and (#{$dir}-width: #{$breakpoint}px) {
